--- a/lesson_8/css/style.css
+++ b/lesson_8/css/style.css
@@ -330,3 +330,8 @@ margin-bottom: 150px;
    linear-gradient(55.95deg, rgba(0, 202, 91, 0.3) 0%,
    rgba(247, 94, 5, 0.3) 100%);
 }
+footer span {
+   text-align: center;
+   padding: 18px;;
+   color: #FFFFFF;
+}
