--- a/lesson_8/css/style.css
+++ b/lesson_8/css/style.css
@@ -333,6 +333,9 @@ margin-bottom: 150px;
 footer {
    padding: 20px;
 }
+footer .lesson-title {
+   margin-bottom: 0px;
+}
 footer span {
    text-align: center;
    padding: 18px;;
