--- a/lesson_8/css/reset.css
+++ b/lesson_8/css/reset.css
@@ -5,10 +5,12 @@
 	margin: 0;
 	border: 0;
 	box-sizing: border-box;
+	display: inline-block;
 }
 a {
 	text-decoration: none;
 	color: inherit;
+	display: inline-block;
 }
 li {
 	list-style: none;
